Mobile: corrected adaptive design in this page

--- a/src/scss/mobile/mobile-fourth-screen.scss
+++ b/src/scss/mobile/mobile-fourth-screen.scss
@@ -49,7 +49,7 @@
         &-games32 {
           left: 60%;
           top: -135rem;
-          //animation: showImg32Right 1s;
+          animation: showImg32Right1148 1s;
         }
       }
     }
@@ -125,7 +125,7 @@
         &-games32 {
           left: 35%;
           top: -155rem;
-          //animation: showImg32Right 1s;
+          animation: showImg32Right500 1s;
         }
       }
     }
