--- a/src/scss/mobile/mobile-sixth-screen.scss
+++ b/src/scss/mobile/mobile-sixth-screen.scss
@@ -47,7 +47,7 @@
         &-games5 {
           top: -90rem;
           left: 40%;
-          //animation: showImgRight 1s;
+          animation: showImgRight500 1s;
         }
       }
     }
