--- a/src/scss/mobile/mobile-content.scss
+++ b/src/scss/mobile/mobile-content.scss
@@ -149,10 +149,12 @@
       &-contLeft {
         left: initial;
         top: 30rem;
+        animation: showLeft500 1s;
       }
       &-contRight {
         right: initial;
         top: -20rem;
+        animation: showRight500 1s;
       }
       &-num {
         width: 125rem;
@@ -194,12 +196,30 @@
   }
 }
 
+@keyframes showLeft500 {
+  from {
+    left: -100%;
+  }
+  to {
+    left: 0;
+  }
+}
+
 @keyframes showRight {
   from {
     right:-100%;
   }
   to {
     right: -60%;
+  }
+}
+
+@keyframes showRight500 {
+  from {
+    right:-100%;
+  }
+  to {
+    right: 0;
   }
 }
 
@@ -266,6 +286,16 @@
   }
 }
 
+@keyframes showImgRight500 {
+  from {
+    left: 110%;
+  }
+
+  to {
+    left: 30%;
+  }
+}
+
 @keyframes showImg32Right {
   from {
     left: 110%;
@@ -276,6 +306,26 @@
   }
 }
 
+@keyframes showImg32Right1148 {
+  from {
+    left: 110%;
+  }
+
+  to {
+    left: 60%;
+  }
+}
+
+@keyframes showImg32Right500 {
+  from {
+    left: 110%;
+  }
+
+  to {
+    left: 35%;
+  }
+}
+
 @keyframes showSize {
   from {
     transform: scale(0);
@@ -283,15 +333,5 @@
 
   to {
     transform: scale(1);
-  }
-}
-
-@keyframes showImgRight500 {
-  from {
-    left: 110%;
-  }
-
-  to {
-    left: 30%;
   }
 }
