--- a/src/scss/pages/home/fourth-screen.scss
+++ b/src/scss/pages/home/fourth-screen.scss
@@ -24,3 +24,17 @@
     margin-bottom: 3rem;
   }
 }
+
+@media (max-width : 1024px) {
+  .fourth-screen {
+    &-inner {
+      padding: 2rem 4rem;
+    }
+    &-subtitle {
+      text-align: center;
+    }
+    &-tagline {
+      text-align: center;
+    }
+  }
+}
