--- a/src/scss/1C-integration/1C-integration-first-screen.scss
+++ b/src/scss/1C-integration/1C-integration-first-screen.scss
@@ -20,9 +20,9 @@
     align-items: center;
     column-gap: 1rem;
     &-arrow {
-      width: 3rem;
-      height: 3rem;
-      object-fit: contain;
+      width: 1.5rem;
+      height: 1.5rem;
+      object-fit: cover;
     }
   }
 }
