--- a/src/scss/all-pages/feedback-form.scss
+++ b/src/scss/all-pages/feedback-form.scss
@@ -21,9 +21,11 @@
     background-color: $cyan;
     border-radius: 0.5rem;
     img {
-      width: 100%;
-      height: 100%;
-      object-fit: contain;
+      width: 3rem;
+      height: 3rem;
+      object-fit: cover;
+      position: relative;
+      left: 8%;
       transform: rotate(-90deg);
       transition: transform 250ms ease-out;
     }
