--- a/src/scss/pages/home/first-screen.scss
+++ b/src/scss/pages/home/first-screen.scss
@@ -65,9 +65,7 @@
       border-radius: 0.5rem;
       cursor: pointer;
       img {
-        object-fit: contain;
-        width: 100%;
-        height: 100%;
+        @include swiper-arrows;
       }
     }
   }
