--- a/src/scss/pages/services/services-slider.scss
+++ b/src/scss/pages/services/services-slider.scss
@@ -527,9 +527,7 @@
         cursor: pointer;
 
         img {
-          object-fit: contain;
-          width: 100%;
-          height: 100%;
+          @include swiper-arrows;
         }
       }
     }
