--- a/src/scss/all-pages/dropdown.scss
+++ b/src/scss/all-pages/dropdown.scss
@@ -39,5 +39,13 @@
       }
     }
   }
+}
 
+@media (max-width : 853px) {
+  .dropdown{
+    display: none;
+    &-menu{
+      display: none;
+    }
+  }
 }
