--- a/src/scss/all-pages/header.scss
+++ b/src/scss/all-pages/header.scss
@@ -116,45 +116,61 @@ header{
         .header-tablet {
             display: block;
         }
-        .header-menu-item-arrowTablet{
+        //.header-menu-item-arrowTablet{
+        //    transition: transform 200ms ease-in;
+        //    transform: rotate(270deg);
+        //    position: relative;
+        //    left: 10%;
+        //    top: -1rem;
+        //    height: 1rem;
+        //    width: 2rem;
+        //    object-fit: cover;
+        //}
+
+        .header-menu-item-arrow{
             transition: transform 200ms ease-in;
             transform: rotate(270deg);
             position: relative;
             left: 10%;
             top: -1rem;
-            height: 1rem;
-            width: 2rem;
-            object-fit: cover;
+        }
+        .header-menu-item-services{
+            &.active{
+                .header-menu-item-arrow{
+                    transform: rotate(360deg);
+                }
+            }
         }
 
-        .header-menu-itemServices{
-            &.activeServices{
-                .arrow-forListServices{
-                    transform: rotate(360deg);
-                }
-            }
-        }
-        .header-menu-itemDev {
-            &.activeDev {
-                .arrow-forListDev {
-                    transform: rotate(360deg);
-                }
-            }
-        }
-        .header-menu-itemCRM {
-            &.activeCRM {
-                .arrow-forListCRM {
-                    transform: rotate(360deg);
-                }
-            }
-        }
-        .header-menu-itemSupport {
-            &.activeSupport {
-                .arrow-forListSupport {
-                    transform: rotate(360deg);
-                }
-            }
-        }
+
+        //.header-menu-itemServices{
+        //    &.active{
+        //        .arrow-forListServices{
+        //            transform: rotate(360deg);
+        //        }
+        //    }
+        //}
+        //.header-menu-itemDev {
+        //    &.activeDev {
+        //        .arrow-forListDev {
+        //            transform: rotate(360deg);
+        //        }
+        //    }
+        //}
+        //.header-menu-itemCRM {
+        //    &.activeCRM {
+        //        .arrow-forListCRM {
+        //            transform: rotate(360deg);
+        //        }
+        //    }
+        //}
+        //.header-menu-itemSupport {
+        //    &.activeSupport {
+        //        .arrow-forListSupport {
+        //            transform: rotate(360deg);
+        //        }
+        //    }
+        //}
 
     }
 
