Development: corrected some styles (added names sections classes in scss files

--- a/src/scss/development/development-fifth-screen.scss
+++ b/src/scss/development/development-fifth-screen.scss
@@ -24,18 +24,20 @@
 }
 
 @media (max-width : 1280px) {
-  .page {
-    &-bonuses {
-      padding-top: 15rem;
-      padding-bottom: 5rem;
+  .development-fifth-screen {
+    .page {
+      &-bonuses {
+        padding-top: 15rem;
+        padding-bottom: 5rem;
+      }
     }
-  }
 
-  .list {
-    &-item {
-      &-img {
-        width: 4rem;
-        height: 4rem;
+    .list {
+      &-item {
+        &-img {
+          width: 4rem;
+          height: 4rem;
+        }
       }
     }
   }
