--- a/src/scss/development/development-first-screen.scss
+++ b/src/scss/development/development-first-screen.scss
@@ -1,6 +1,3 @@
-@import "../utils/typography";
-@import "../utils/vars";
-
 .page {
   &-header {
     display: flex;
@@ -50,17 +47,19 @@
 }
 
 @media (max-width : 1280px) {
-  .page {
-    &-title {
-      @include border-top;
-      padding-top: 3.3rem;
-      padding-bottom: 3.3rem;
-    }
+ .development-first-screen {
+   .page {
+     &-title {
+       padding-top: 3.3rem;
+       padding-bottom: 3.3rem;
+       @include border-top;
+     }
 
-    &-header {
-      background-position: bottom;
-    }
-  }
+     &-header {
+       background-position: bottom;
+     }
+   }
+ }
 }
 
 @media (max-width : 860px) {
