--- a/src/scss/development/development-second-screen.scss
+++ b/src/scss/development/development-second-screen.scss
@@ -73,51 +73,53 @@
 }
 
 @media (max-width : 1280px) {
-  .development {
-    &-content {
-      &-cont {
-        display: grid;
-        grid-template-rows: repeat(3, auto);
-        grid-template-columns: repeat(2, auto);
-        padding-top: 9.8rem;
-        padding-bottom: 5.6rem;
-      }
+  .development-second-screen {
+    .development {
+      &-content {
+        &-cont {
+          display: grid;
+          grid-template-rows: repeat(3, auto);
+          grid-template-columns: repeat(2, auto);
+          padding-top: 9.8rem;
+          padding-bottom: 5.6rem;
+        }
 
-      &-header {
-        grid-area: 1 / 1 / 2 / 2;
-        row-gap: 1.6rem;
-      }
+        &-header {
+          grid-area: 1 / 1 / 2 / 2;
+          row-gap: 1.6rem;
+        }
 
-      &-text {
-        width: 80%;
-        grid-area: 3 / 1 / 4 / 2;
-      }
+        &-text {
+          width: 80%;
+          grid-area: 3 / 1 / 4 / 2;
+        }
 
-      h1 {
-        font-size: 7.5rem;
-      }
+        h1 {
+          font-size: 7.5rem;
+        }
 
-      &-header2 {
-        grid-area: 2 / 1 / 3 / 2;
-        justify-self: center;
-        row-gap: 1.16rem;
-      }
+        &-header2 {
+          grid-area: 2 / 1 / 3 / 2;
+          justify-self: center;
+          row-gap: 1.16rem;
+        }
 
-      &-imgMagic {
-        height: 68rem;
-        left: 42%;
+        &-imgMagic {
+          height: 68rem;
+          left: 42%;
+        }
       }
     }
-  }
 
-  .content {
-    &-block {
-      &-gallery {
-        display: flex;
-        column-gap: 5rem;
-        row-gap: 3.3rem;
-        align-self: end;
-        grid-area: 3 / 2 / 4 / 3;
+    .content {
+      &-block {
+        &-gallery {
+          display: flex;
+          column-gap: 5rem;
+          row-gap: 3.3rem;
+          align-self: end;
+          grid-area: 3 / 2 / 4 / 3;
+        }
       }
     }
   }
