--- a/src/scss/internet-shops/internet-shops-first-screen.scss
+++ b/src/scss/internet-shops/internet-shops-first-screen.scss
@@ -17,3 +17,14 @@
 .scissors-img {
   filter: none;
 }
+
+@media (max-width : 1280px) {
+  .internet-shops-first-screen {
+    .page {
+      &-title {
+        @include border-top;
+        padding-top: 3.3rem;
+      }
+    }
+  }
+}
