--- a/src/scss/development/development-second-screen.scss
+++ b/src/scss/development/development-second-screen.scss
@@ -1,7 +1,7 @@
 .development {
   &-content {
     position: relative;
-
+    overflow: hidden;
     &-cont {
       color: $dark;
       padding-top: 7.3rem;
