--- a/src/scss/1C-integration/1C-integration-second-screen.scss
+++ b/src/scss/1C-integration/1C-integration-second-screen.scss
@@ -101,6 +101,23 @@
       }
     }
   }
+
+  .list-item-text {
+    font-size: 3.6rem;
+  }
+
+  .page-list-title {
+    font-size: 4rem;
+  }
+
+  .content-block {
+    &-header {
+      font-size: 4rem;
+    }
+    &-text {
+      font-size: 3.6rem;
+    }
+  }
 }
 
 @media (max-width : 500px) {
