--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -84,6 +84,16 @@
         column-gap: 1.7rem;
         align-items: center;
       }
+      &-title {
+        font-weight: 500;
+        font-size: 3.1rem;
+        line-height: 1.2;
+      }
+      &-text {
+        font-weight: 350;
+        font-size: 2.25rem;
+        line-height: 1;
+      }
     }
 }
 
@@ -127,6 +137,18 @@
           font-size: 3rem;
         }
       }
+      &-list {
+        &-title {
+          font-size: 4rem;
+        }
+        &-text {
+          font-size: 3.6rem;
+        }
+      }
+    }
+
+    .list-item-text {
+      font-size: 3.6rem;
     }
   }
 
