--- a/src/scss/integrations/integrations-third-screen.scss
+++ b/src/scss/integrations/integrations-third-screen.scss
@@ -19,6 +19,11 @@
       padding-bottom: 3.75rem;
     }
   }
+  &-description {
+    &-text {
+      font-size: 2.5rem;
+    }
+  }
 }
 
 .page {
@@ -81,7 +86,7 @@
 @media (max-width : 1024px) {
   .integrations {
     &-content {
-      background-image: url("../img/integrations/cubes.png");
+      background-image: url("../../img/integrations/cubes.png");
       background-repeat: no-repeat;
       background-size: 60%;
       background-position-x: 110%;
@@ -89,6 +94,11 @@
       height: auto;
       &-block {
         width: 60%;
+      }
+    }
+    &-description {
+      &-text {
+        font-size: 3.6rem;
       }
     }
   }
