Header: added property display:none in some classes

--- a/src/scss/all-pages/header.scss
+++ b/src/scss/all-pages/header.scss
@@ -142,6 +142,9 @@ header{
             }
         }
 
+        .menu-listService, .menu-listDev, .menu-listCRM, .menu-listSupport {
+            display: none;
+        }
 
         //.header-menu-itemServices{
         //    &.active{
