--- a/src/scss/automation.scss
+++ b/src/scss/automation.scss
@@ -17,8 +17,11 @@
   }
 }
 
+@media (max-width : 690px) {
+  header .header-logo {
+    width: 18rem;
+  }
 
-@media (max-width : 500px) {
   html {
     font-size: 4px;
   }
