--- a/src/scss/integrations.scss
+++ b/src/scss/integrations.scss
@@ -39,17 +39,21 @@
 
 }
 
+@media (max-width : 690px) {
+  header .header-logo {
+    width: 18rem;
+  }
+
+  html {
+    font-size: 4px;
+  }
+}
+
 @media (max-width : 650px) {
   .page {
     &-title {
       text-align: center;
       font-size: 7rem;
     }
-  }
-}
-
-@media (max-width : 500px) {
-  html {
-    font-size: 4px;
   }
 }
