--- a/src/scss/maintenance.scss
+++ b/src/scss/maintenance.scss
@@ -35,6 +35,16 @@
   }
 }
 
+@media (max-width : 690px) {
+  header .header-logo {
+    width: 18rem;
+  }
+
+  html {
+    font-size: 4px;
+  }
+}
+
 @media (max-width : 650px) {
   .page {
     &-title {
@@ -51,10 +61,6 @@
 }
 
 @media (max-width : 500px) {
-  html {
-    font-size: 4px;
-  }
-
   .page {
     &-headerConsultation {
       &-blueBtn {
