--- a/src/scss/contacts.scss
+++ b/src/scss/contacts.scss
@@ -67,6 +67,16 @@
   }
 }
 
+@media (max-width : 690px) {
+  header .header-logo {
+    width: 18rem;
+  }
+
+  html {
+    font-size: 4px;
+  }
+}
+
 @media (max-width : 525px) {
   .page {
     &-title {
