--- a/src/scss/crm-support.scss
+++ b/src/scss/crm-support.scss
@@ -57,6 +57,16 @@
   }
 }
 
+@media (max-width : 690px) {
+  header .header-logo {
+    width: 18rem;
+  }
+
+  html {
+    font-size: 4px;
+  }
+}
+
 @media (max-width : 650px) {
   .page {
     &-title {
@@ -67,10 +77,6 @@
 }
 
 @media (max-width : 500px) {
-  html {
-    font-size: 4px;
-  }
-
   .phone {
     display: block;
   }
