--- a/src/scss/specialists.scss
+++ b/src/scss/specialists.scss
@@ -62,7 +62,11 @@
   }
 }
 
-@media (max-width : 400px) {
+@media (max-width : 690px) {
+  header .header-logo {
+    width: 18rem;
+  }
+
   html {
     font-size: 4px;
   }
